--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,2 +1,20 @@
-<h1>Movies#show</h1>
-<p>Find me in app/views/movies/show.html.erb</p>
+<h1><%= @movie["title"] %></h1>
+<p>From the amazing SWAPI</p>
+
+<h3>Characters</h3>
+<% @movie["characters"].each do |c| %>
+  <% response = RestClient.get(c) %>
+  <p><%= JSON.parse(response)["name"] %></p>
+<% end %>
+
+<h3>Planets</h3>
+<% @movie["planets"].each do |p| %>
+  <% response = RestClient.get(p) %>
+  <p><%= JSON.parse(response)["name"] %></p>
+<% end %>
+
+<h3>Starships</h3>
+<% @movie["starships"].each do |s| %>
+  <% response = RestClient.get(s) %>
+  <p><%= JSON.parse(response)["name"] %></p>
+<% end %>
