--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
   </head>
 
   <body>
+    <%= link_to "Home", root_path %>
+    <br><br>
     <%= form_tag(search_path, method: "get") do %>
       <%= text_field_tag :search, params[:search] %>
       <%= submit_tag 'Search' %>
