--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -2,19 +2,16 @@
 <p>From the amazing SWAPI</p>
 
 <h3>Characters</h3>
-<% @movie["characters"].each do |c| %>
-  <% response = RestClient.get(c) %>
-  <p><%= link_to JSON.parse(response)["name"], character_path(c[/\d+/]) %></p>
+<% @movie["characterConnection"]["characters"].each do |c| %>
+  <p><%= link_to c["name"], character_path(c["id"]) %></p>
 <% end %>
 
 <h3>Planets</h3>
-<% @movie["planets"].each do |p| %>
-  <% response = RestClient.get(p) %>
-  <p><%= link_to JSON.parse(response)["name"], planet_path(p[/\d+/]) %></p>
+<% @movie["planetConnection"]["planets"].each do |p| %>
+  <p><%= link_to p["name"], planet_path(p["id"]) %></p>
 <% end %>
 
 <h3>Starships</h3>
-<% @movie["starships"].each do |s| %>
-  <% response = RestClient.get(s) %>
-  <p><%= link_to JSON.parse(response)["name"], starship_path(s[/\d+/]) %></p>
+<% @movie["starshipConnection"]["starships"].each do |s| %>
+  <p><%= link_to s["name"], starship_path(s["id"]) %></p>
 <% end %>
