--- a/app/views/characters/show.html.erb
+++ b/app/views/characters/show.html.erb
@@ -14,26 +14,23 @@
   <tr>
     <td><%= @character["height"] %></td>
     <td><%= @character["mass"] %></td>
-    <td><%= @character["hair_color"] %></td>
-    <td><%= @character["skin_color"] %></td>
-    <td><%= @character["eye_color"] %></td>
-    <td><%= @character["birth_year"] %></td>
+    <td><%= @character["hairColor"] %></td>
+    <td><%= @character["skinColor"] %></td>
+    <td><%= @character["eyeColor"] %></td>
+    <td><%= @character["birthYear"] %></td>
     <td><%= @character["gender"] %></td>
   </tr>
 </table>
 
 <h3>Homeworld</h3>
-<% response = RestClient.get(@character["homeworld"]) %>
-<p><%= link_to JSON.parse(response)["name"], planet_path(@character["homeworld"][/\d+/]) %></p>
+<p><%= link_to @character["homeworld"]["name"], planet_path(@character["homeworld"]["id"]) %></p>
 
 <h3>Films</h3>
-<% @character["films"].each do |f| %>
-  <% response = RestClient.get(f) %>
-  <p><%= link_to JSON.parse(response)["title"], movie_path(f[/\d+/]) %></p>
+<% @character["filmConnection"]["films"].each do |f| %>
+  <p><%= link_to f["title"], movie_path(f["episodeID"]) %></p>
 <% end %>
 
 <h3>Starships</h3>
-<% @character["starships"].each do |s| %>
-  <% response = RestClient.get(s) %>
-  <p><%= link_to JSON.parse(response)["name"], starship_path(s[/\d+/]) %></p>
+<% @character["starshipConnection"]["starships"].each do |s| %>
+  <p><%= link_to s["name"], starship_path(s["id"]) %></p>
 <% end %>
