show planet, fix tables, fix string list

--- a/app/views/characters/show.html.erb
+++ b/app/views/characters/show.html.erb
@@ -1,7 +1,7 @@
 <h1><%= @character["name"] %></h1>
 <p>From the amazing SWAPI</p>
 
-<table>
+<table border="1">
   <tr>
     <th>Height</th>
     <th>Mass</th>
