--- a/app/views/starships/show.html.erb
+++ b/app/views/starships/show.html.erb
@@ -1,7 +1,7 @@
 <h1><%= @starship["name"] %></h1>
 <p>From the amazing SWAPI</p>
 
-<table>
+<table border="1">
   <tr>
     <th>Model</th>
     <th>Manufacturer</th>
